--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 
 # --- Startup ---
 exec systemd-inhibit --what=handle-power-key sleep infinity
-exec mako --background-color=#403c64 --text-color=#e4f3fa --border-color=#ff5370 --font="Agave Nerd Font Mono 14"
+exec mako --background-color=#403c64 --text-color=#e4f3fa --border-color=#ff5370 --font="Arimo Nerd Font 14"
 
 # --- Theme Variables (define WITHOUT #) ---
 set $fg e4f3fa
@@ -33,7 +33,7 @@ set $up k
 set $right l
 
 # --- Terminal (Foot: colors without #) ---
-set $term foot -f "Agave Nerd Font Mono:size=14" \
+set $term foot -f "Arimo Nerd Font:size=14" \
   -o "colors.foreground=$fg" \
   -o "colors.background=$bg_alt" \
   -o "colors.alpha=0.90"
@@ -93,11 +93,11 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # Workspaces
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
+bindsym $mod+1 workspace 󰻽
+bindsym $mod+2 workspace 
+bindsym $mod+3 workspace 
+bindsym $mod+4 workspace 󰭹
+bindsym $mod+5 workspace 
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
@@ -105,11 +105,11 @@ bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
 # Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+1 move container to workspace 󰻽
+bindsym $mod+Shift+2 move container to workspace 
+bindsym $mod+Shift+3 move container to workspace 
+bindsym $mod+Shift+4 move container to workspace 󰭹
+bindsym $mod+Shift+5 move container to workspace 
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
@@ -160,7 +160,7 @@ bindsym $mod+r mode "resize"
 # --- Status Bar ---
 bar {
     position top
-    font "Agave Nerd Font Mono 16"
+    font "Arimo Nerd Font 16"
     colors {
        background #$bgt
        statusline #$fg
@@ -171,7 +171,7 @@ bar {
        inactive_workspace  #$bg_alt #$bg_alt #$fg
        urgent_workspace    #$critical_bg #$critical_bg #$fg
     }
-    status_command bumblebee-status -m cpu memory battery pasink pasource network time -p time.format="%H:%M" -t moonlight-powerline -p network.left-click="cinnamon-settings network" 
+    status_command bumblebee-status -m apt cpu2 memory pasink pasource  brightness network battery date time -p time.format="%H:%M" memory.format="{used}/{total}" cpu2.layout="cpu2.coresload" -t moonlight-powerline -p network.left-click="cinnamon-settings network" 
     gaps 4
 }
 
