--- a/config
+++ b/config
@@ -3,6 +3,7 @@
 # --- Startup ---
 exec systemd-inhibit --what=handle-power-key sleep infinity
 exec mako --background-color=#403c64 --text-color=#e4f3fa --border-color=#ff5370 --font="AdwaitaMono Nerd Font 14"
+exec blueman-manager
 
 # --- Theme Variables (define WITHOUT #) ---
 set $fg e4f3fa
@@ -14,6 +15,7 @@ set $critical_bg ff5370
 set $fuzzel_bg 403c64cc
 set $fuzzel_fg e4f3faff
 
+font pango:AdwaitaMono Nerd Font 12
 
 # --- Gaps ---
 gaps inner 4
@@ -93,11 +95,11 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # Workspaces
-bindsym $mod+1 workspace 󰻽
-bindsym $mod+2 workspace 
-bindsym $mod+3 workspace 
-bindsym $mod+4 workspace 󰭹
-bindsym $mod+5 workspace 
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
@@ -105,11 +107,11 @@ bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
 # Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 󰻽
-bindsym $mod+Shift+2 move container to workspace 
-bindsym $mod+Shift+3 move container to workspace 
-bindsym $mod+Shift+4 move container to workspace 󰭹
-bindsym $mod+Shift+5 move container to workspace 
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
@@ -159,8 +161,8 @@ bindsym $mod+r mode "resize"
 
 # --- Status Bar ---
 bar {
-    position top
-    font "AdwaitaMono Nerd Font 14"
+    position bottom
+    font "AdwaitaMono Nerd Font 12"
     colors {
        background #$bgt
        statusline #$fg
