add blue light filter

--- a/config
+++ b/config
@@ -1,13 +1,12 @@
 # Sway in one file! 
 # This configuration is fully self-contained—everything you need to run and customize Sway is included in this single file, with no other configs required.
 
-
 # use "man 5 sway" to read the configuration manual if needed
 # use "man -k sway" for list of all manuals
 
 # ---
 # Dependencies: Install all required packages with:
-#   sudo apt update && sudo apt install sway swaylock swayidle foot mako fuzzel wlogout brightnessctl pulseaudio-utils bumblebee-status xdg-desktop-portal-wlr grim slurp wl-clipboard network-manager ddcutil
+#   sudo apt update && sudo apt install sway swaylock swayidle foot mako fuzzel wlogout brightnessctl pulseaudio-utils bumblebee-status xdg-desktop-portal-wlr grim slurp wl-clipboard network-manager ddcutil gammastep
 #
 # Notes:
 # - 'mako' is the notification daemon (package name is just 'mako', not 'mako-notifier')
@@ -38,6 +37,7 @@ exec systemd-inhibit --what=handle-power-key sleep infinity
 
 exec mako --background-color=#403c64 --text-color=#e4f3fa --border-color=#ff5370 --font="AdwaitaMono Nerd Font 14"
 exec blueman-applet
+exec gammastep -O 4500
 
 # --- Theme Variables (define WITHOUT #) ---
 set $fg e4f3fa
