--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 # ============================================================================
-# EASY ONE-FILE SWAY CONFIGURATION
+# EASY ONE-FILE SWAY CONFIGURATION FOR LINUX MINT: MintySway
 # ============================================================================
 #
 # This file configures the Sway window manager—a tiling Wayland compositor.
